fixed .row padding whitespace

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -34,6 +34,11 @@ body
   src: url('/fonts/VarianeScript.ttf');
 }
 
+.row {
+  padding-right: 0px;
+  margin-right: 0px;
+}
+
 .todo
 {
   font-weight: bolder;
